# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary_aparajit.txt
2_openai/: 1_lab1.ipynb  3_lab3.ipynb
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/config/: agents.yaml
3_crew/fin_searcher/: README.md  pyproject.toml  report.md
3_crew/fin_searcher/src/fin_searcher/: crew.py  main.py
