[project]
name = "fin_searcher"
version = "0.1.0"
description = "fin_searcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
fin_searcher = "fin_searcher.main:run"
run_crew = "fin_searcher.main:run"
train = "fin_searcher.main:train"
replay = "fin_searcher.main:replay"
test = "fin_searcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
